# my_practices

./: README.md
c/regexp/: CMakeLists.txt  my_prog.c  run.sh
c/templates/: my_prog.c  run.sh
c/tuntap/: alloc_dev.c
codeJam/2009_1c/: large_result.txt  small_result.txt  solve.py
codeJam/2009_1c_B/: 1.txt  large_result.txt  solve.py  solve_B.py
codeJam/2016_1A/: A-small-attempt0.in  B_large.txt  B_small.txt  solve_C.py
codeJam/2016_1B/: A-small-attempt3.in  sample_B.txt  sample_a.txt  smallA.txt  solve_B.py
codeJam/2016_first/: B_Sample.txt  C_large_result.txt  large_result.txt  small_result.txt  solve_d.py  stupid_B.py
codeJam/2018_ks_4A/: A-large.in  A-small-attempt0.in  B-small-attempt0.in  large.res  reseult_bsmall.txt  run_me.sh  samle_b.txt  solve_A.py  solve_B.py
codeJam/2018_ks_A/: solve_A.py  solve_B.py
codeJam/2018_ks_b/: small.res
codeJam/template/: run_me.sh
go/: hello  hello.go
python/curses/: howto.py  life.py  repeat.py
python/dprlog/: dprSniffer.py  dprlogShow.py  dprlogShow.sublime-workspace  dprlog_disp.py  logAnalyzer.py
python/extend_c/: Makefile  samplemodule.c  setup.py  testsample.py
python/google_calendar/: client_secret.json  quickstart.py  readme.txt
python/google_tasklist/: client_secret.json  quick_task_list.py  test.py
python/httpclient/: http1.py
python/learning/: module1.py  output (eric-VirtualBox's conflicted copy 2013-05-01).txt  output.txt  sample_01.py  sample_01.py~  sample_02.py  sample_03.py  sample_04.py
python/qrcode_gen/: FileInpsectorGrid.py  InstallPackage.bat  Readme.txt  (+2 more)
(+24 files in other folders)
